--- a/_data/links.yml
+++ b/_data/links.yml
@@ -29,6 +29,10 @@
     url: https://www.youtube.com/watch?v=iakFfOmanJU
   - title: "Play StarCraft"
     url: https://www.technologyreview.com/s/609242/humans-are-still-better-than-ai-at-starcraftfor-now/
+  - title: "Create levels for Super Mario Bros"
+    url: https://people.southwestern.edu/~schrum2/re/papers/volz.gecco2018.pdf
+  - title: "Create levels for Doom"
+    url: https://arxiv.org/abs/1804.09154
   near:
   - title: "Play Sonic the Hedgehog"
     url: https://techcrunch.com/2018/04/05/machine-learning-zone-openai-competition-takes-on-sonic-the-hedgehog/
@@ -84,6 +88,8 @@
     url: https://www.pix18.com/about.html
   - title: "Write Harry Potter fanfiction"
     url: https://www.theverge.com/2017/12/12/16768582/harry-potter-ai-fanfiction
+  - title: "Write a Grimm's fairytale"
+    url: https://io9.gizmodo.com/created-with-artificial-intelligence-this-new-grimms-f-1825336802
   near:
   - title: "Compose pop music"
     url: https://djmag.com/news/first-pop-song-composed-artificial-intelligence-available-stream
@@ -107,6 +113,8 @@
   - title: "Recommend movies"
     url: https://www.wired.co.uk/article/how-do-netflixs-algorithms-work-machine-learning-helps-to-predict-what-viewers-will-like  
   does:
+  - title: "Help you find a date"
+    url: https://factordaily.com/all-about-that-bayes/
   - title: "Reduce your water bills"
     url: https://www.engadget.com/2017/11/21/buoy-iot-water-sensor/
   - title: "Optimise your heating"
@@ -140,6 +148,8 @@
   - title: "Choose your clothes"
     url: https://www.forbes.com/sites/forbes-finds/2018/04/02/personal-stylist-meets-artificial-intelligence-for-this-menswear-subscription-box/
   near:
+  - title: "Personalise the flavour of your drinks and snacks"
+    url: https://newfoodeconomy.org/artificial-intelligence-personalized-food-beverage/
   - title: "Cook your meals"
     url: https://www.forbes.com/sites/eustaciahuen/2016/10/31/the-worlds-first-home-robotic-chef-can-cook-over-100-meals/
   - title: "Buy stuff on your behalf"
@@ -211,6 +221,8 @@
     url: https://www.sporttechie.com/nvidia-deep-learning-video-analytics-automate-future-player-scouting/
   - title: "Rewrite the news to remove bias"
     url: https://futurism.com/ai-journalist-media-bias-news-knowhere/
+  - title: "Schedule output for a TV channel"
+    url: https://www.bbc.co.uk/rd/blog/2018-05-artificial-intelligence-broadcasting-television
 
 - section: "Finance"
   wins:
@@ -244,6 +256,8 @@
   - title: "Get invoices paid instantly"
     url: http://previ.se/#about
   near:
+  - title: "Price debt"
+    url: https://www.economist.com/graphic-detail/2018/05/14/artificial-intelligence-may-change-the-way-companies-issue-debt
   
 - section: "Administrative"
   wins:
@@ -270,12 +284,17 @@
     url: https://www.blog.google/products/g-suite/new-ways-help-teams-work-faster-and-smarter-g-suite/
   - title: "Spy on you at work"
     url: https://www.economist.com/news/leaders/21739658-artificial-intelligence-pushes-beyond-tech-industry-work-could-become-faireror-more
+  near:
+  - title: "Phone to make an appointment"
+    url: https://www.youtube.com/watch?v=bd1mEm2Fy08
   
 - section: "Industrial"
   wins:
   - title: "Reduce industrial energy consumption"
     url: http://uk.businessinsider.com/google-deepmind-ai-in-every-company-data-centre-end-of-year-2016-7
   does:
+  - title: "Improve radio network performance"
+    url: https://www.zdnet.com/article/ericsson-and-softbank-deploy-machine-learning-radio-network/
   - title: "Help deliver the mail"
     url: https://twitter.com/grattonboy/status/981908906317438977
   - title: "Clean floors"
@@ -358,6 +377,8 @@
   - title: "Predict parking availability"
     url: https://research.googleblog.com/2017/02/using-machine-learning-to-predict.html 
   near:
+  - title: "Control traffic lights"
+    url: https://thenextweb.com/artificial-intelligence/2018/05/17/ibm-files-patent-for-ai-managed-traffic-lights/
   - title: "Design a sports car"
     url: https://www.fastcompany.com/3054028/inside-the-hack-rod-the-worlds-first-ai-designed-car
   - title: "Predict where you want to go"
@@ -382,6 +403,10 @@
     url: https://www.globes.co.il/en/article-zencity-raises-17m-to-help-municipalities-assist-residents-1001204302
   - title: "Detect illegal logging in the rainforest"
     url: https://www.blog.google/topics/machine-learning/fight-against-illegal-deforestation-tensorflow
+  - title: "Monitor lakes and surrounding ecosystems"
+    url: https://www.roboticsbusinessreview.com/ai/ai-iot-smart-sensors-preserve-lake-george/
+  - title: "Track the migration patterns of endangered whales"
+    url: https://www.google.com/about/stories/soundwaves/
   near:
   - title: "Predict court cases"
     url: https://www.ucl.ac.uk/news/news-articles/1016/241016-AI-predicts-outcomes-human-rights-trials
@@ -406,6 +431,8 @@
   - title: "Help deaf students learn"
     url: https://blogs.microsoft.com/ai/ai-powered-captioning/
   near:
+  - title: "Track the emotional state of students in classrooms"
+    url: https://thenextweb.com/artificial-intelligence/2018/05/18/chinas-orwellian-surveillance-state-turns-its-ai-powered-gaze-on-students/
   - title: "Tutor kids in maths"
     url: http://hellothinkster.com/
   - title: "Create personalised learning plans"
@@ -414,6 +441,8 @@
     url: http://contenttechnologiesinc.com/
   - title: "Be a teaching assistant"
     url: https://www.washingtonpost.com/news/innovations/wp/2016/05/11/this-professor-stunned-his-students-when-he-revealed-the-secret-identity-of-his-teaching-assistant/
+  - title: "Answer any question by talking to books"
+    url: https://qz.com/1252664/talk-to-books-at-ted-2018-ray-kurzweil-unveils-googles-astounding-new-search-tool-will-answer-any-question-by-reading-thousands-of-books/
 
 - section: "Medicine"
   wins:
@@ -426,6 +455,8 @@
   - title: "Predict autism"
     url: https://spectrum.ieee.org/the-human-os/biomedical/imaging/ai-predicts-autism-from-infant-brain-scans       
   does:
+  - title: "Measure the severity of small vessel disease"
+    url: https://www.imperial.ac.uk/news/186108/artificial-intelligence-improves-stroke-dementia-diagnosis/
   - title: "Predict imminent cardiac arrest"
     url: https://www.digitaltrends.com/cool-tech/ai-listens-for-cardiac-arrest/
   - title: "Diagnose cataracts"
@@ -462,6 +493,8 @@
     url: https://www.techrepublic.com/article/ai-deep-learning-to-predict-cardiovascular-risk-from-retina-scans/
   - title: "Identify inter-cranial haemorrhages"
     url: https://www.nature.com/articles/s41746-017-0015-z.pdf
+  - title: "Record your visit to the doctor"
+    url: https://www.statnews.com/2018/05/18/artificial-intelligence-recording-doctor-visits/
   near:
   - title: "Enhance cancer pathology reports"
     url: https://techcrunch.com/2018/02/05/paige-ai-nabs-25m-inks-ip-deal-with-sloan-kettering-to-bring-machine-learning-to-cancer-pathology/
@@ -533,6 +566,8 @@
     url: https://www.nature.com/articles/d41586-018-03774-5
   - title: "Enhance atomic imaging"
     url: https://www.nature.com/articles/d41586-018-03305-2
+  - title: "Accelerate the discovery of metallic glass"
+    url: https://phys.org/news/2018-04-artificial-intelligence-discovery-metallic-glass.html
   near:
   - title: "Predict life on other planets"
     url: https://www.firstpost.com/tech/news-analysis/artificial-intelligence-could-help-astronomers-predict-the-probability-of-life-on-other-planets-study-4418287.html
@@ -581,6 +616,10 @@
   - title: "Identify objects of interest in drone footage"
     url: http://www.defenseone.com/technology/2017/12/pentagons-new-artificial-intelligence-already-hunting-terrorists/144742/
   near:
+  - title: "Find late passengers in airports"
+    url: https://www.itnews.com.au/news/singapore-airport-looks-to-facial-recognition-to-find-late-passengers-490035
+  - title: "Interview travellers at airports"
+    url: https://www.cnbc.com/2018/05/15/lie-detectors-with-artificial-intelligence-are-future-of-border-security.html
   - title: "Enhance real-time police surveillance"
     url: https://www.wsj.com/articles/artificial-intelligence-could-soon-enhance-real-time-police-surveillance-1522761813
   - title: "Flag suspicious people at border crossings"
@@ -605,6 +644,8 @@
     url: https://english.alarabiya.net/en/News/gulf/2018/03/11/Dubai-Police-considers-using-of-artificial-intelligence-to-fight-drug-smuggling.html
   - title: "Drive a tank"
     url: http://www.newsweek.com/china-shows-unmanned-tanks-driven-remote-control-eye-toward-artificial-855696
+  - title: "Increase military situational awareness"
+    url: https://thebulletin.org/compass-new-ai-driven-situational-awareness-tool-pentagon11816
 
 - section: "Computing"
   wins:
@@ -621,6 +662,8 @@
     url: http://www.digitaljournal.com/tech-and-science/technology/hitachi-uses-ai-to-predict-when-server-hard-drives-will-fail/article/504575
   - title: "Perform functional software testing"
     url: https://techcrunch.com/2018/02/21/with-10m-in-funding-mabl-brings-machine-learning-to-software-testing/
+  - title: "Speed up Microsoft Office"
+    url: https://www.youtube.com/watch?v=rPVpjkU7TZ
   near:
   - title: "Write AI software"
     url: https://www.technologyreview.com/s/603381/ai-software-learns-to-make-ai-software/
@@ -663,6 +706,8 @@
   - title: "Track stereotypes about women and minorities"
     url: http://www.sciencemag.org/news/2018/04/artificial-intelligence-reveals-how-us-stereotypes-about-women-and-minorities-have
   near:
+  - title: "Finish your sentences"
+    url: https://www.cnbc.com/2018/05/08/google-launches-smart-compose-for-gmail.html
   - title: "Exchange banter with humans"
     url: https://www.weforum.org/agenda/2018/02/trash-talk-from-an-ai-could-help-humans-cooperate-better
   - title: "Translate like a native speaker"
@@ -728,8 +773,10 @@
   - title: "Rank photos by aesthetic appeal"
     url: https://www.weforum.org/agenda/2018/02/google-ai-algorithm-predicts-images-attractive-to-humans
   - title: "See in the dark"
-    url: http://www.bbc.co.uk/news/technology-43373488
+    url: https://qz.com/1279913/artificial-intelligence-is-learning-to-see-in-the-dark/
   near:
+  - title: "Tell whether an image has been Photoshopped"
+    url: https://minyoungg.github.io/selfconsistency/
   - title: "Guess your age"
     url: https://www.theverge.com/2015/4/30/8522649/microsoft-how-old-do-i-look
   - title: "Recognise emotions in pictures"
@@ -770,6 +817,8 @@
     url: https://thenextweb.com/artificial-intelligence/2018/03/02/researchers-just-taught-robots-to-predict-your-every-move/
   - title: "Move like a fish"
     url: https://thenextweb.com/artificial-intelligence/2018/03/21/mits-new-robot-fish-is-eerily-realistic/
+  - title: "Go for a jog in the park"
+    url: https://www.theguardian.com/technology/2018/may/11/boston-dynamics-atlas-jog-humanoid-robot-run-through-park
   near:
   - title: "Dance to any music"
     url: https://www.nbcnews.com/mach/video/this-mobile-robot-is-learning-to-dance-1203388995569
@@ -793,6 +842,8 @@
     url: https://thenextweb.com/artificial-intelligence/2017/08/07/scientists-create-ai-that-can-tell-if-youre-dreaming/
   - title: "Make socio-economic classifications"
     url: https://www.theguardian.com/commentisfree/2018/feb/13/facebook-coding-whole-new-class-system
+  - title: "Navigate like a mammal"
+    url: https://thenextweb.com/artificial-intelligence/2018/05/15/deepminds-ai-spontaneously-developed-the-ability-to-navigate-like-a-mammal/
   near:
   - title: "Judge a beauty contest"
     url: https://www.wired.co.uk/article/robot-beauty-contest-beauty-ai
