--- a/_data/links.yml
+++ b/_data/links.yml
@@ -669,7 +669,7 @@
     url: https://thebulletin.org/compass-new-ai-driven-situational-awareness-tool-pentagon11816
   - title: "Build a virtual border wall"
     url: https://www.theguardian.com/technology/2018/jun/13/mexico-us-border-wall-surveillance-artificial-intelligence-technology
-  - title: "Tell whether you are drunk from how you use your phone"
+  - title: "Tell if you are drunk from your phone"
     url: https://www.fastcompany.com/40583532/uber-wants-to-know-when-youre-drunk
 
 - section: "Computing"
